[metadata]
name = data_migration
summary = Data Migration for MidoNet
description-file = README.rst
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]

[wheel]
universal = 1
